# workshop_rosconfr_2026

./: README.md
workshop_robot_description/urdf/: ur10e_with_cube.urdf.xacro
workshop_robot_moveit_config/: package.xml
workshop_robot_moveit_config/config/: ur_controllers.yaml
workshop_robot_moveit_config/launch/: workshop_control.launch.py  workshop_moveit.launch.py
workshop_robot_moveit_config/srdf/: ur.srdf.xacro
